<resources>
    <string name="app_name">TodoApp</string>

    <string name="organize_pl">
        organize, plan, and collaborate on tasks with Mtodo.Your busy life deserves this.you can manage checklist and your goal.
    </string>
    <string name="manage_your">
        Manage your tasks
    </string>
    <string name="get_started">Get started</string>
    <string name="signup">SIGN UP</string>

    <!--    String menu of navigation view-->
    <string name="nav_home">Home</string>
    <string name="nav_edit_profile">Edit profile</string>
    <string name="nav_daily_tasks">Daily tasks</string>
    <string name="nav_important_tasks">Important tasks</string>
    <string name="nav_done_tasks">Done tasks</string>
    <string name="nav_sign_out">Sign out</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="start_manage">
    Start Manage Your Task With\nTodo
    </string>

    <string name="already_hav">
    Already have an account?
    </string>
    <string name="already_hav_login">
    LOG IN
    </string>

    <string name="hello_again">Hello Again!</string>
    <string name="hello">Hello!</string>
    <string name="wel_back">Welcome Back</string>
    <string name="wel_todo_app">welcome to Todo app</string>
    <string name="signup_started">sign up to get started.</string>

    <string name="todo_logo">Todo App</string>
    <string name="edit_name">your name</string>
    <string name="edit_email">Enter your email</string>
    <string name="edit_password">password</string>

    <string name="tv_email">Email:</string>
    <string name="tv_username">Your name:</string>
    <string name="tv_dateOfBirth">Date of Birth:</string>
    <string name="tv_gender">Gender:</string>
    <string name="tv_save">Save</string>
    <string name="tv_cancel">Cancel</string>

    <string name="or_continue">Or Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="by_signing_up">by signing up you agree to our terms &amp; conditions of use and privacy policy.</string>

    <string name="toast_enter_all_information">Please complete all information.</string>
    <string name="toast_email_badly_formatted">The email address is badly formatted.</string>
    <string name="toast_email_already_another_account">The email address is already in use by another account.</string>
    <string name="toast_password_invalid">The given password is invalid.</string>
    <string name="toast_wrong_email_password">Wrong email or password</string>

    <string name="error_password_invalid">The password is invalid it must 6 characters at least</string>
    <string name="error_email_invalid">The email is invalid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">home_fragment</string>
    <string name="edit_fragment">edit_fragment</string>
    <string name="daily_fragment">daily_fragment</string>
    <string name="important_fragment">important_fragment</string>
    <string name="done_fragment">done_fragment</string>
    <string name="tb_avatar">Avatar</string>

</resources>