<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_edit_profile"
            android:title="@string/nav_edit_profile"
            android:icon="@drawable/ic_fluent_edit_16_regular"/>
        <item android:id="@+id/nav_daily_tasks"
            android:title="@string/nav_daily_tasks"
            android:icon="@drawable/ic_daily"/>
        <item android:id="@+id/nav_important_tasks"
            android:title="@string/nav_important_tasks"
            android:icon="@drawable/ic_eva_star_fill"/>
        <item android:id="@+id/nav_done_tasks"
            android:title="@string/nav_done_tasks"
            android:icon="@drawable/ic_eva_done_all_fill"/>
    </group>
</menu>