<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_medium"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/todo_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_logo"
        android:textAppearance="@style/todo_logo"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/jost_black_italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:fontFamily="@font/jost_medium"
                android:textAppearance="@style/hello_again"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wel_todo_app"
                android:fontFamily="@font/jost_medium"
                android:textAppearance="@style/wel_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_started"
                android:fontFamily="@font/jost_medium"
                android:textAppearance="@style/wel_back"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_edittext_border_unfocus">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:hint="@string/edit_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="@dimen/padding_medium"
                    android:background="@null"
                    android:padding="10dp"
                    android:textColorHint="#D9D9D9"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min_medium"
                android:background="@drawable/layout_edittext_border_unfocus">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:hint="@string/edit_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="@dimen/padding_medium"
                    android:background="@null"
                    android:padding="10dp"
                    android:textColorHint="#D9D9D9"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:background="@drawable/layout_edittext_border_unfocus">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="@dimen/padding_max_medium"
                    android:layout_marginEnd="@dimen/margin_min_medium"
                    android:textColor="@color/black"
                    android:textColorHint="#D9D9D9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/imv_show_hide"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/imv_show_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/color_hint_hide"
                    android:layout_marginEnd="@dimen/margin_min_medium"
                    android:src="@drawable/ic_show"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/signup"
            android:fontFamily="@font/jost_variable_font_wght"
            android:textSize="@dimen/txt_max_min"
            android:background="@drawable/btn_login_signup"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_medium"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_continue"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_min_max">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/not_a_member"
                android:fontFamily="@font/jost_light"
                android:layout_marginEnd="@dimen/margin_very_min"
                android:text="@string/not_a_member"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/register_now"
                android:text="@string/register_now"
                android:fontFamily="@font/jost_semi_bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>