<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.SplashScreenActivity">

    <RelativeLayout
        android:id="@+id/completed_r"
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_max">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_login_signup"
            android:scaleType="fitCenter"
            android:importantForAccessibility="no" />

    </RelativeLayout>

    <TextView
        android:id="@+id/start_manag"
        android:layout_width="276dp"
        android:layout_height="66dp"
        android:text="@string/start_manage"
        android:textAppearance="@style/start_manag"
        android:gravity="center_horizontal|top"
        android:layout_below="@+id/completed_r"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/btn_signup"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/start_manag"
        android:layout_marginTop="@dimen/margin_max_medium"
        android:background="@drawable/style_button_large">

        <TextView
            android:id="@+id/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAppearance="@style/get_started"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signup"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:foregroundGravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_hav"
                android:textAppearance="@style/already_hav"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_txt_login"
                android:text="@string/already_hav_login"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>