<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.EditProfileFragment">
    <data>
        <variable
            name="userProfileViewModel"
            type="com.hae.todoapp.viewmodel.UserProfileViewModel" />
        <variable
            name="userProfile"
            type="com.hae.todoapp.data.model.UserProfile" />
        <import type="android.view.View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:visibility="@{userProfileViewModel.hasUser ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:padding="@dimen/padding_medium">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_avt"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/margin_max_medium"
                    tools:ignore="MissingConstraints"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/civ_avt"
                    android:layout_marginTop="@dimen/margin_max"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_email"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_edittext_border_unfocus"
                        android:layout_marginTop="@dimen/margin_max_min"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email">

                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_email"
                            android:text="@={userProfile.email}"
                            android:inputType="none"
                            android:enabled="false"
                            android:paddingStart="16dp"
                            android:paddingEnd="@dimen/padding_medium"
                            android:background="@null"
                            android:padding="10dp"
                            android:textColorHint="#D9D9D9"
                            android:textColor="@color/black"
                            android:textSize="@dimen/txt_max_min"
                            tools:ignore="RtlSymmetry,TextFields"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_layout_email"
                    android:layout_marginTop="@dimen/margin_medium"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_username"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_edittext_border_unfocus"
                        android:layout_marginTop="@dimen/margin_max_min"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username">

                        <EditText
                            android:id="@+id/edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_name"
                            android:text="@{userProfile.username}"
                            android:textSize="@dimen/txt_max_min"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/padding_medium"
                            android:paddingEnd="@dimen/padding_medium"
                            android:background="@null"
                            android:padding="10dp"
                            android:textColorHint="#D9D9D9"
                            android:textColor="@color/black"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:overScrollMode="always"
                            tools:ignore="RtlSymmetry"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_date_gender"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_layout_username"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_layout_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints"
                        app:layout_constraintWidth_percent="0.57">

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_dateOfBirth"
                            android:textStyle="bold"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/layout_edittext_border_unfocus"
                            android:padding="10dp"
                            android:paddingStart="@dimen/padding_medium"
                            android:paddingEnd="@dimen/padding_medium"
                            android:layout_marginTop="@dimen/margin_max_min"
                            app:layout_constraintTop_toBottomOf="@+id/tv_date">

                            <TextView
                                android:id="@+id/tv_dateOfBirth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userProfile.dateOfBirth}"
                                android:textColor="@color/black"
                                android:textSize="@dimen/txt_max_min"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_layout_gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:ignore="MissingConstraints"
                        app:layout_constraintWidth_percent="0.37">

                        <TextView
                            android:id="@+id/tv_gen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_gender"
                            android:textStyle="bold"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/layout_edittext_border_unfocus"
                            android:padding="8dp"
                            android:layout_marginTop="@dimen/margin_max_min"
                            app:layout_constraintTop_toBottomOf="@+id/tv_gen">

<!--                            <TextView-->
<!--                                android:id="@+id/tv_gender"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="@{userProfile.gender}"-->
<!--                                android:textColor="@color/black"-->
<!--                                android:textSize="@dimen/txt_max_min"-->
<!--                                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                                app:layout_constraintRight_toRightOf="parent"-->
<!--                                app:layout_constraintTop_toTopOf="parent"-->
<!--                                app:layout_constraintBottom_toBottomOf="parent"/>-->

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/acp_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_layout_date_gender"
                    android:layout_marginTop="@dimen/margin_max">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintWidth_percent="0.45"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/tv_cancel"/>

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintWidth_percent="0.45"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@string/tv_save"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </FrameLayout>

</layout>